syntax = "proto3";

option go_package = "/fulfillment";

service DeliveryPartnerService {
    rpc RegisterDeliveryPartner (RegisterDeliveryPartnerRequest) returns (DeliveryPartner) {}
}

service DeliveryService{
    rpc InitiateDelivery (DeliveryRequest) returns (response) {}
    rpc UpdateDeliveryStatus (DeliveryStatusRequest) returns (response){}
}

message Location{
    float xCordinate = 1;
    float yCordinate = 2;
}

message RegisterDeliveryPartnerRequest{
    string username = 1;
    string password = 2;
    Location location = 3;
    string availability = 4;
}

message DeliveryPartner{
    int64 id = 1;
    string username = 2;
    Location location = 3;
    string availability = 4;
}

message DeliveryRequest{
    int64 orderId = 1;
    Location pickUpLocation = 2;
    Location deliveryLocation = 3;
}

message DeliveryStatusRequest {
    int64 orderId = 1;
    string status = 2;
}

message response {
    string message = 1;
}

//protoc --go_out=. --go-grpc_out=. fulfillment.proto
